--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="SportCentre.App"
+﻿<Application x:Class="SportCenter.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SportCentre"
+             xmlns:local="clr-namespace:SportCenter"
              
              StartupUri="MainWindow.xaml">
     <Application.Resources>
