--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="SportCentre.MainWindow"
+﻿<Window x:Class="SportCenter.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SportCentre"
+        xmlns:local="clr-namespace:SportCenter"
         mc:Ignorable="d"
          xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         
-        xmlns:uc="clr-namespace:SportCentre.UserControlKteam"
+        xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
      TextElement.FontWeight="Regular"
