--- a/UserControlKteam/ControlBarUC.xaml
+++ b/UserControlKteam/ControlBarUC.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="SportCentre.UserControlKteam.ControlBarUC"
+﻿<UserControl x:Class="SportCenter.UserControlKteam.ControlBarUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SportCentre.UserControlKteam"
+             xmlns:local="clr-namespace:SportCenter.UserControlKteam"
              
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"             
