--- a/ChooseSport.xaml
+++ b/ChooseSport.xaml
@@ -20,7 +20,7 @@
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         
-        Name="mainWindow"
+        Name="ChooseSportWindow"
       
         Title="Phoenix Sport Center Managament" Height="500" Width="525">
     <i:Interaction.Triggers>
@@ -35,7 +35,7 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <uc:ControlBarUC Tag="{Binding Title, ElementName=mainWindow}" Loaded="ControlBarUC_Loaded" Height="32" Margin="0,0,0.046,-0.246" VerticalAlignment="Top"></uc:ControlBarUC>
+            <uc:ControlBarUC Tag="{Binding Title, ElementName=ChooseSportWindow}" Loaded="ControlBarUC_Loaded" Height="32" Margin="0,0,0.046,-0.246" VerticalAlignment="Top"></uc:ControlBarUC>
         </Grid>
         <Grid Grid.Row="1">
             <TextBlock FontFamily="Bungee Inline" FontSize="25" Margin="127,56,127.046,-55.015"  >
