Payment Bill For

--- a/Football_Field_Bill.xaml
+++ b/Football_Field_Bill.xaml
@@ -17,14 +17,14 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         Name="BillWindow"
         Title="LOGIN" Height="500" Width="525">
-    <ScrollViewer>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
+            
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" >
@@ -38,7 +38,7 @@
             Content="{materialDesign:PackIcon ArrowLeftBoldBox }"
             ToolTip="Icon"
             IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Left" Margin="20,0,0,0" />
-        <ScrollViewer Grid.Row="3">
+        <ScrollViewer Height="400" Grid.Row="3" VerticalAlignment="Top">
         <Grid >
         <materialDesign:Card  Margin="20,40">
             <StackPanel>
@@ -433,5 +433,5 @@
         </Grid>
         </ScrollViewer>
         </Grid>
-    </ScrollViewer>
+    
 </Page>
