--- a/Basketball_Field_Bill.xaml
+++ b/Basketball_Field_Bill.xaml
@@ -18,7 +18,7 @@
         Name="BillWindow"
         Title="LOGIN" Height="500" Width="525">
  
-    <ScrollViewer>
+    
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"></RowDefinition>
@@ -39,8 +39,8 @@
             Content="{materialDesign:PackIcon ArrowLeftBoldBox }"
             ToolTip="Icon"
             IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Left" Margin="20,0,0,0" />
-            <ScrollViewer Grid.Row="3">
-                <Grid >
+        <ScrollViewer Height="400" Grid.Row="3" VerticalAlignment="Top">
+            <Grid >
                     <materialDesign:Card  Margin="20,40">
                         <StackPanel>
                             <Expander
@@ -433,5 +433,5 @@
                 </Grid>
             </ScrollViewer>
         </Grid>
-    </ScrollViewer>
+    
 </Page>
