--- a/ResourceXAML/MainResource.xaml
+++ b/ResourceXAML/MainResource.xaml
@@ -3,4 +3,5 @@
                     xmlns:viewmodel="clr-namespace:SportCenter.ViewModel"
                     xmlns:local="clr-namespace:SportCenter.ResourceXAML">
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
+    <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
 </ResourceDictionary>
