--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -479,30 +479,33 @@
                             <ColumnDefinition Width="133*"/>
                         </Grid.ColumnDefinitions>
                         <Button x:Name="FB_button"
-            Style="{DynamicResource MaterialDesignRaisedButton}"
-            materialDesign:ShadowAssist.ShadowDepth="Depth4"
-            Content="FOOTBALL FIELD"
-            Width="150" Height="40"
-            Grid.Column="0" Grid.Row="3"
-            ToolTip="Resource name: MaterialDesignRaisedLightButton"            
-            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                            Style="{DynamicResource MaterialDesignRaisedButton}"
+                            materialDesign:ShadowAssist.ShadowDepth="Depth4"
+                            Content="FOOTBALL FIELD"
+                            Width="150" Height="40"
+                            Grid.Column="0" Grid.Row="3"
+                            ToolTip="Resource name: MaterialDesignRaisedLightButton"
+                            Command="{Binding _ShowWindowCommand_FB}"
+                            CommandParameter="{Binding ElementName=FB_button}"
+                            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Center" VerticalAlignment="Top" Click="FB_button_Click" />
                         <Button x:Name="BKB_button"
-            Style="{DynamicResource MaterialDesignRaisedButton}"
-            materialDesign:ShadowAssist.ShadowDepth="Depth4"
-            Content="BASKETBALL COURT" FontSize="10"
-            Width="150" Height="40"            
-            Grid.Column="1" Grid.Row="3"
-            ToolTip="Resource name: MaterialDesignRaisedLightButton"            
-            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                            Style="{DynamicResource MaterialDesignRaisedButton}"
+                            materialDesign:ShadowAssist.ShadowDepth="Depth4"
+                            Content="BASKETBALL COURT" FontSize="10"
+                            Width="150" Height="40"            
+                            Grid.Column="1" Grid.Row="3"
+                            Command="{Binding ShowWindowCommand_BK}"
+                            ToolTip="Resource name: MaterialDesignRaisedLightButton"            
+                            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Center" VerticalAlignment="Top" />
                         <Button x:Name="VLB_button"
-            Style="{DynamicResource MaterialDesignRaisedButton}"
-            materialDesign:ShadowAssist.ShadowDepth="Depth4"
-            Content="VOLLEYBALL COURT"  FontSize="10"
-            Width="150" Height="40" 
-            Grid.Column="2" Grid.Row="3"
-            ToolTip="Resource name: MaterialDesignRaisedLightButton"            
-            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Center" VerticalAlignment="Top" />
-
+                            Style="{DynamicResource MaterialDesignRaisedButton}"
+                            materialDesign:ShadowAssist.ShadowDepth="Depth4"
+                            Content="VOLLEYBALL COURT"  FontSize="10"
+                            Width="150" Height="40" 
+                            Grid.Column="2" Grid.Row="3"
+                            Command="{Binding ShowWindowCommand_VL}"
+                            ToolTip="Resource name: MaterialDesignRaisedLightButton"            
+                            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Center" VerticalAlignment="Top" />
 
                         <Image Source="image/5854088.png" 
                Grid.Row="2"
