--- a/Add_Field.xaml
+++ b/Add_Field.xaml
@@ -19,6 +19,15 @@
         x:Name="Add_Filed"
         Title="Add_Field" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <uc:ControlBarUC Tag="{Binding Title, ElementName=BillWindow}" ></uc:ControlBarUC>
+        </Grid>
+        
         
     </Grid>
 </Window>
