--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -82,7 +82,9 @@
                                 <ColumnDefinition Width="50*"/>
                             </Grid.ColumnDefinitions>
                             <Grid Grid.Column="0">
-                                <Button HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="120">
+                                <Button x:Name="FB" HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="120"
+                                        Command="{Binding ShowFootballFieldCommand}"
+                            CommandParameter="{Binding ElementName=FB}">
                                     <Grid>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="auto"></RowDefinition>
@@ -98,7 +100,9 @@
                             </Grid>
                             <Grid Grid.Column="1">
 
-                                <Button HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="120">
+                                <Button x:Name="VL" HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="120" Click="Button_Click"
+                                        Command="{Binding ShowVolleyballFieldCommand}"
+                            CommandParameter="{Binding ElementName=VL}">
                                     <Grid>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="auto"></RowDefinition>
@@ -112,7 +116,9 @@
                                 </Button>
                             </Grid>
                             <Grid Grid.Column="2">
-                                <Button HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="120">
+                                <Button x:Name="BS" HorizontalAlignment="Center" Height="200" VerticalAlignment="Center" Width="120"
+                                        Command="{Binding ShowBasketballFieldCommand}"
+                            CommandParameter="{Binding ElementName=BS}">
                                     <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="27*"/>
@@ -123,7 +129,7 @@
                                             <RowDefinition></RowDefinition>
                                         </Grid.RowDefinitions>
                                         <materialDesign:PackIcon Kind="Basketball" Height="87" Width="82" Margin="0,10,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" />
-                                        <TextBlock FontWeight="Bold" HorizontalAlignment="Center" Margin="15,96,14.708,-0.277" Grid.RowSpan="2" Grid.ColumnSpan="2">
+                                        <TextBlock  FontWeight="Bold" HorizontalAlignment="Center" Margin="15,96,14.708,-0.277" Grid.RowSpan="2" Grid.ColumnSpan="2">
                        Basketball
                                         </TextBlock>
                                     </Grid>
