--- a/VolleyballField.xaml
+++ b/VolleyballField.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SportCenter.SoccerField"
+﻿<Window x:Class="SportCenter.VolleyballField" 
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,7 +20,7 @@
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         
-        Name="SoccerFieldWindow"
+        Name="VolleyballFieldWindow"
       
         Title="Phoenix Sport Center Managament" Height="500" Width="525">
     <i:Interaction.Triggers>
@@ -39,8 +39,8 @@
         <Grid Grid.Row="0">
             <uc:ControlBarUC Tag="{Binding Title, ElementName=ChooseSportWindow}" Height="32" Margin="0,0,0.046,-0.246" VerticalAlignment="Top"></uc:ControlBarUC>
         </Grid>
-        <TextBlock Grid.Row="1" FontFamily="Bungee Inline" FontSize="30" Margin="194,11.246,194.046,391.938" Grid.RowSpan="2"  >
-                Bóng đá
+        <TextBlock Grid.Row="2" Width="auto" FontFamily="Bungee Inline" FontSize="30" Margin="156,5.246,156.046,391.108"  >
+                Volleyball
         </TextBlock>
         <ScrollViewer Height="403" VerticalAlignment="Top" Grid.Row="2" Margin="0,65.246,0.046,-0.062">
             <Grid>
@@ -51,9 +51,7 @@
                 </Grid.RowDefinitions>
                 <materialDesign:Card Grid.Row="0" Width="463" Padding="8" UniformCornerRadius="6" Height="113" Margin="23,23,22.061,321.846" Grid.RowSpan="3" Grid.ColumnSpan="3">
                     <Grid>
-                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan">
-                            <materialDesign:PackIcon Kind="SoccerField" Height="Auto" Width="100" Margin="0,-13,-0.308,-10.338" VerticalAlignment="Stretch" />
-                        </materialDesign:Card>
+                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan"/>
                         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,10,76.508,60.738" Width="211" Height="26"
                          Foreground="#8c9aa1" FontSize="25" FontWeight="ExtraBold"       
                                    ><Run Text="Sân bóng số 1"/></TextBlock>
@@ -68,9 +66,7 @@
                 </materialDesign:Card>
                 <materialDesign:Card Grid.Row="1" Width="463" Padding="8" UniformCornerRadius="6" Height="113" Margin="23,156,22.061,188.846" Grid.RowSpan="2" Grid.ColumnSpan="3">
                     <Grid>
-                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan">
-                            <materialDesign:PackIcon Kind="SoccerField" Height="Auto" Width="100" Margin="0,-13,-0.308,-10.338" VerticalAlignment="Stretch" />
-                        </materialDesign:Card>
+                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan"/>
                         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,10,76.508,60.738" Width="211" Height="26"
                          Foreground="#8c9aa1" FontSize="25" FontWeight="ExtraBold"       
                                    ><Run Text="Sân bóng số 2"/></TextBlock>
@@ -85,9 +81,7 @@
                 </materialDesign:Card>
                 <materialDesign:Card Grid.Row="2" Width="463" Padding="8" UniformCornerRadius="6" Height="113" Margin="23,294,22.061,50.846" Grid.ColumnSpan="3">
                     <Grid>
-                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan">
-                            <materialDesign:PackIcon Kind="SoccerField" Height="Auto" Width="100" Margin="0,-13,-0.308,-10.338" VerticalAlignment="Stretch" />
-                        </materialDesign:Card>
+                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan"/>
                         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,10,76.508,60.738" Width="211" Height="26"
                          Foreground="#8c9aa1" FontSize="25" FontWeight="ExtraBold"       
                                    ><Run Text="Sân bóng số 3"/></TextBlock>
@@ -103,10 +97,6 @@
 
             </Grid>
         </ScrollViewer>
-
-
-
-
     </Grid>
 
 </Window>
